<resources>
    <string name="app_name">bingeWorthy</string>
    <string name="title">Gravity</string>
    <string name="overview">Raj is a rich, carefree, happy-go-lucky second generation NRI. Simran is the daughter of Chaudhary Baldev Singh, who in spite of being an NRI is very strict about adherence to Indian values. Simran has left for India to be married to her childhood fiancé. Raj leaves for India with a mission at his hands, to claim his lady love under the noses of her whole family. Thus begins a saga.</string>
    <string name="vote_average">7.9/10</string>
    <string name="vote_count">1479 votes</string>
    <string name="actor">Marlon Brando</string>
    <string name="character">Don Vito Corleone</string>
    <string name="job">Director</string>
    <string name="crew">Francis Ford Coppola</string>
    <string name="Welcome">bingeWorthy</string>
    <string name="login">please enter the email and password you used to create your account</string>
    <string name="createAccount">register your account below, we will never share you email address without your permission</string>
    <string name="tagline">a recommendation service to help you find your next binge"</string>
    <string name="recommendButton">recommend()</string>
    <string name="searchParameter">movie, band, book or show</string>
    <string name="logo1">binge</string>
    <string name="logo2">W</string>
    <string name="logo3">orthy</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="signInButton">lets go</string>
    <string name="toCreateAccount">click here to create an account</string>
    <string name="confirmPass">confirm password</string>
    <string name="displayName">display name</string>
    <string name="toLogIn">click here to log in an existing account</string>
    <string name="youSearched">you searched for:</string>
    <string name="query">Type Your Search Above</string>
    <string name="results">results:</string>
    <string name="savedItems">myBinges()</string>
    <string name="touchQueue">swipe to delete</string>
    <string name="videoRotate">rotate phone for video</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
