<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="190dp"
        android:id="@+id/moviePosterView"
        android:src="@drawable/poster"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/title"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/overview"
            android:textAlignment="textStart"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/vote_averageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_average"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/vote_countTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_count"
            android:padding="5dp"/>

    </LinearLayout>
</LinearLayout>