<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guest.binge_worthy.ui.MovieDetailFragment"
    android:background="@color/colorPrimary">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/background_light"
            >
            <ImageView
                android:layout_width="130dp"
                android:layout_height="190dp"
                android:id="@+id/posterImageView"
                android:src="@drawable/poster"
                android:scaleType="centerCrop"
                android:padding="2dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fragmentTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/title"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="2dp"/>
                <TextView
                    android:id="@+id/fragmentDescriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/overview"
                    android:textAlignment="textStart"
                    android:textSize="10sp"
                    android:padding="2dp"/>
                <TextView
                    android:id="@+id/fragmentVote_averageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_average"
                    android:padding="2dp"
                    android:textSize="10sp"/>
                <TextView
                    android:id="@+id/fragmentVote_countTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/vote_count"
                    android:textSize="10sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/background_light"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <ImageView
                android:layout_width="27dp"
                android:layout_height="48dp"
                android:src="@drawable/photo"
                android:id="@+id/castMember1ImageView"></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/castMember1Name"
                android:text="@string/actor"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/castMember1Character"
                android:text="@string/character"
                android:layout_gravity="center"
                android:padding="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/background_light"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <ImageView
                android:layout_width="27dp"
                android:layout_height="48dp"
                android:src="@drawable/photo"
                android:id="@+id/castMember2ImageView"></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/castMember2Name"
                android:text="@string/actor"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/castMember2Character"
                android:text="@string/character"
                android:layout_gravity="center"
                android:padding="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/background_light"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <ImageView
                android:layout_width="27dp"
                android:layout_height="48dp"
                android:src="@drawable/photo"
                android:id="@+id/castMember3ImageView"></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/castMember3Name"
                android:text="@string/actor"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/castMember3Character"
                android:text="@string/character"
                android:layout_gravity="center"
                android:padding="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/background_light"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >
            <ImageView
                android:layout_width="27dp"
                android:layout_height="48dp"
                android:src="@drawable/photo"
                android:id="@+id/crewMemberImageView"></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/crewMember1Job"
                android:text="@string/job"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/crewMember1Name"
                android:text="@string/crew"
                android:layout_gravity="center"
                android:padding="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
